# dynaarm_demo

./: .gitignore  README.md  joy_test_publisher.py  repos.list
archive/dynaarm_moveit_config/: .setup_assistant  package.xml
archive/dynaarm_moveit_config/config/: kinematics.yaml  moveit.rviz  moveit_controllers.yaml
dynaarm_driver/: package.xml  setup.py
dynaarm_driver/config/ros2control/: common.yaml
dynaarm_driver/config/ui/: config.rviz  dynaarm_plotjuggler.xml  rqt.perspective
dynaarm_driver/dynaarm_driver/: common.py
dynaarm_driver/launch/: mock.launch.py  real.launch.py  sim.launch.py  ui.launch.py
dynaarm_dual_example/dynaarm_dual_example/: CMakeLists.txt
dynaarm_dual_example/dynaarm_dual_example/config/: controllers.yaml
dynaarm_dual_example/dynaarm_dual_example/launch/: mock.launch.py  real.launch.py
dynaarm_dual_example/dynaarm_dual_example_description/launch/: view.launch.py
dynaarm_dual_example/dynaarm_dual_example_description/urdf/: dynaarm_dual_example.urdf.xacro
dynaarm_dual_example/dynaarm_dual_example_moveit_config/config/: dynaarm.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
dynaarm_end_effectors/: CMakeLists.txt  package.xml
dynaarm_end_effectors/launch/: end_effector.launch.py  freedrive_handle.launch.py  weight.launch.py
dynaarm_end_effectors/meshes/: freedrive_handle_mesh.STL  hook.dae  shovel_gripper_left_mesh.stl  shovel_gripper_mesh.stl  shovel_hook_mesh.stl  shovel_mesh.stl  weight_mesh.stl
dynaarm_end_effectors/urdf/: freedrive_handle.urdf.xacro  freedrive_handle.xacro  freedrive_handle_standalone.urdf.xacro  hook.urdf.xacro  hook_standalone.urdf.xacro  shovel.urdf.xacro  shovel_gripper.urdf.xacro  shovel_gripper_left.urdf.xacro  shovel_gripper_right.urdf.xacro  shovel_gripper_standalone.urdf.xacro  shovel_standalone.urdf.xacro  weight_5kg.urdf.xacro  weight_5kg_standalone.urdf.xacro
dynaarm_examples/: CMakeLists.txt  package.xml
dynaarm_examples/config/: controllers.yaml
dynaarm_examples/launch/: mock.launch.py  real.launch.py  sim.launch.py
dynaarm_examples/scripts/: PlotJoggler_basic.xml  all_files.py  sample_move.py  trajectory_data_config0_vel1.5.csv  trajectory_data_config2_vel2.5.csv  trajectory_data_config3_vel0.5.csv  trajectory_data_config3_vel1.5.csv  trajectory_data_config3_vel2.5.csv  trajectory_test_all_files.py  trajectory_test_one_file.py
dynaarm_examples/scripts/trajectory_data/: trajectory_data_config0_vel0.5.csv  trajectory_data_config0_vel2.5.csv  trajectory_data_config1_vel1.5.csv  trajectory_data_config1_vel2.5.csv
dynaarm_gazebo/: CMakeLists.txt  package.xml
dynaarm_gazebo/launch/: dynaarm_gazebo.launch.py
dynaarm_hardware_interfaces/dynaarm_hardware_interface/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
dynaarm_hardware_interfaces/dynaarm_hardware_interface/src/: dynaarm_hardware_interface.cpp
dynaarm_hardware_interfaces/dynaarm_hardware_interface_base/: CMakeLists.txt  package.xml
dynaarm_hardware_interfaces/dynaarm_hardware_interface_base/src/: dynaarm_hardware_interface_base.cpp
dynaarm_hardware_interfaces/dynaarm_hardware_interface_common/: CMakeLists.txt  package.xml
dynaarm_hardware_interfaces/dynaarm_mock_hardware_interface/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
dynaarm_hardware_interfaces/dynaarm_mock_hardware_interface/src/: dynaarm_mock_hardware_interface.cpp
dynaarm_moveit_config/: .setup_assistant  package.xml
dynaarm_moveit_config/config/: dynaarm.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
dynaarm_moveit_config/launch/: moveit.launch.py  moveit_gazebo.launch.py
dynaarm_msgs/: CMakeLists.txt
dynaarm_msgs/msg/: MotorState.msg  MotorStates.msg
dynaarm_single_example/dynaarm_single_example/: CMakeLists.txt  package.xml
dynaarm_single_example/dynaarm_single_example/config/: controllers.yaml
dynaarm_single_example/dynaarm_single_example/launch/: gz_bridge.yaml  isaac.launch.py  mock.launch.py  real.launch.py  sim.launch.py
dynaarm_single_example/dynaarm_single_example/scripts/: PlotJoggler_basic.xml  keyboard_pose.py  set_pid.py  trajectory_test_all_files.py  trajectory_test_one_file.py  workspace_explorer_random.py  workspace_explorer_systematic.py
dynaarm_single_example/dynaarm_single_example_description/: CMakeLists.txt  package.xml
dynaarm_single_example/dynaarm_single_example_description/config/: config.rviz
dynaarm_single_example/dynaarm_single_example_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
end_effectors/: CMakeLists.txt  package.xml
end_effectors/launch/: weight.launch.py
ros2controllers/broadcasters/dynaarm_state_broadcaster/: package.xml  (+2 more)
ros2controllers/controllers/dynaarm_controller_interface/: CMakeLists.txt  package.xml
ros2controllers/controllers/dynaarm_controller_interface/cmake/: pinocchio.cmake
ros2controllers/controllers/dynaarm_controller_interface/include/dynaarm_controller_interface/: dynaarm_controller_interface.hpp  dynaarm_controller_interface.tpp  types.hpp
ros2controllers/controllers/dynaarm_controller_interface/src/: dynaarm_controller_interface.cpp
ros2controllers/controllers/dynaarm_position_controller/: CMakeLists.txt  controller_interface_plugin.xml  package.xml
ros2controllers/controllers/dynaarm_position_controller/include/dynaarm_position_controller/: dynaarm_position_controller.hpp
ros2controllers/controllers/dynaarm_position_controller/src/: dynaarm_position_controller.cpp  dynaarm_position_controller.yaml
ros2controllers/dynaarm_controller_interface_base/: CMakeLists.txt  package.xml
ros2controllers/dynaarm_controller_interface_base/include/dynaarm_controller_interface_base/: dynaarm_controller_interface_base.hpp
ros2controllers/dynaarm_controller_interface_base/src/: dynaarm_controller_interface_base.cpp
user_interface/rqt_plotjuggler/: package.xml  plugin.xml  setup.cfg  setup.py
user_interface/rqt_rviz/: package.xml  plugin.xml  setup.cfg  setup.py
user_interface/rqt_rviz/resource/: embed_rviz.ui
user_interface/rqt_rviz/rqt_rviz/: embed_rviz.py  main.py
(+37 files in other folders)
